feat css completed

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
 
-    <main>
 
         <div class="container">
-            <div class="box-timer"></div>
-            <div class="box-game"></div>
+            <div class="box-timer">
+                <div class="time-counter"></div>
+                <button class="smile">:)</button>
+                <div class="time-counter"></div>
+            </div>
+            <div class="box-game">
+            </div>
         </div>
 
-    </main>
 
     <script src="js/script.js"></script>
 </body>
