feat main button work

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="box-timer">
                 <div class="time-counter"></div>
-                <button class="smile">:)</button>
-                <div class="time-counter"></div>
+                <button class="smile">P</button>
+                <div class="time-counter set-difficulty"></div>
             </div>
             <div class="box-game">
             </div>
