--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
         <div class="container">
             <div class="box-timer">
-                <div class="time-counter"></div>
+                <div class="b-box"></div>
                 <button class="smile">P</button>
-                <div class="time-counter set-difficulty"></div>
+                <select name="" class="b-box"></select>
             </div>
             <div class="box-game">
             </div>
         </div>
 
-
+        
+    <script src="js/functions.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
