--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <div class="box-timer">
                 <div class="b-box"></div>
                 <button class="smile">P</button>
-                <select name="" class="b-box"></select>
+                <select name="" class="b-box">
+                    <option value=""></option>
+                    <option value="easy-mode">easy</option>
+                    <option value="medium-mode">medium</option>
+                    <option value="hard-mode">hard</option>
+                </select>
             </div>
             <div class="box-game">
             </div>
